bynkc/tests/fixtures/positive/334_do_stmt_unit_and_foreach/input.bynk
commons demo.effects

fn noop() -> Effect[()] {
  Effect.pure(())
}

fn greetAll(names: List[String]) -> Effect[()] {
  do names.forEach((n: String) => noop())
}

fn maybeLog(verbose: Bool) -> Effect[()] {
  if verbose {
    do noop()
  }
}

fn run() -> Effect[()] {
  do noop()
}
