bynkc/tests/fixtures/negative/324_do_requires_unit/input.bynk
commons demo.doreq

fn valued() -> Effect[Int] {
  Effect.pure(5)
}

fn bad() -> Effect[()] {
  do valued()
}
